--- a/analyses.qmd
+++ b/analyses.qmd
@@ -26,7 +26,6 @@ library(readxl)
 library(labelled)
 library(gtsummary)
 library(ggstats)
-library(khroma)
 library(scales)
 
 # affichage gtsummary en français
@@ -182,7 +181,12 @@ suivi |>
     y = seance,
     fill = suivi
   ) +
-  geom_bar(position = "fill", width = .8) +
+  geom_bar(
+    position = "fill",
+    width = .8,
+    colour = "white",
+    linewidth = .25
+  ) +
   geom_text(
     aes(
       label = after_stat(prop) |> percent(accuracy = 1),
@@ -196,8 +200,9 @@ suivi |>
   labs(x = NULL, y = NULL, fill = NULL) +
   guides(fill = guide_legend(reverse = TRUE)) +
   scale_x_continuous(expand = c(0, 0)) +
+  # khroma::scale_fill_bright() +
   scale_fill_manual(
-    values = c("#AA3377", "#4477AA", "#44AA99")
+    values = c("#AA3377", "#4477AA", "#228833")
   ) +
   theme_minimal() +
   theme(
